--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ packages = [{include = "matching_app"}]
 [tool.poetry.dependencies]
 python = "^3.10"
 streamlit = "^1.24.0"
-polars = "^0.18.4"
+polars = ">=0.19"
 rapidfuzz = "^3.1.1"
 stqdm = "^0.0.5"
 xlsxwriter = "^3.1.2"
